[project]
name = "connex"
version = "0.2.0"
description = "Elegant easy-to-use neural networks in JAX."
readme = "README.md"
requires-python ="~=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Leonard Gleyzer", email = "lenny@lenn.ai"},
]
keywords = ["jax", "neural-networks", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/leonard-gleyzer/connex" }
dependencies = ["equinox>=0.10.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["connex/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=equinox"

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
fixable = ["I001", "F401"]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["connex", "tests"]