[project]
name = "connex"
version = "0.2.0"
description = "Making neural networks more neural."
readme = "README.md"
requires-python ="~=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Leonard Gleyzer", email = "lenny@lenn.ai"},
]
keywords = ["jax", "neural-networks", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/leonard-gleyzer/connex" }
dependencies = ["equinox>=0.10.4", "jax>=0.4.4", "networkx>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["connex/*"]